# doctor-appointment-schedule

./: Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
config/: settings.py  urls.py
doctor_appoitment_schedule/: asgi.py  settings.py  urls.py  wsgi.py
doctors/: models.py  urls.py  views.py
doctors/migrations/: 0001_initial.py
