[project]
name = "doctor-appointment-schedule"
version = "0.1.0"
description = ""
authors = [
    {name = "G4bs",email = "carneiro.development@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "djangorestframework (>=3.17.1,<4.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "pylance (>=6.0.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
